# open-01

./: .gitignore  .gitmodules  README.md
cad/3MFs/: Display_Mount_OLED_1.3in.3MF  Frame_Level_0.3MF  Frame_Level_1.3MF  Frame_Level_2.3MF  Lidar_Standoff.3mf  Sensor_Holder_TOF_VL53L0X.3MF  Wheel_Castor_Adapter.3MF  Wheel_Spacer_2mm.3MF  Wheel_Spacer_3mm.3MF  Wiring_Organizer.3MF
cad/Parts/: Battery_12V.SLDPRT  DC_Motor_DF_Robot_FIT0441.SLDPRT  Display_Mount_OLED_1.3in.SLDPRT  Frame_Level_0.SLDPRT  Frame_Level_1.SLDPRT  Frame_Level_2.SLDPRT  Lidar_Standoff.SLDPRT  Motor_Coupling_Hub_4mm.SLDPRT  PCB_Board.SLDPRT  PCB_Female_Pin_Header_10.SLDPRT  PCB_Female_Pin_Header_22.SLDPRT  PCB_Terminal_Block_3.SLDPRT  Sensor_Holder_TOF_VL53L0X.SLDPRT  Wheel_80mm_Left.SLDPRT  Wheel_80mm_Right.SLDPRT  Wheel_Castor.SLDPRT  Wheel_Castor_Adapter.SLDPRT  Wheel_Spacer.SLDPRT  Wiring_Organizer.SLDPRT  desktop.ini
cad/STEPs/: Lidar_A1M8.stp  desktop.ini
cad/URDFs/Robot_Assembly_1/: CMakeLists.txt  package.xml
pcb/: open-01-pcb_v1.0.0_step_file.step
pcb/libraries/1315050930246/: 1315050930246.kicad_sym  WL-ILED_5050_PLCC6.kicad_mod
pcb/libraries/2171830001/: 2171830001.kicad_sym  MOLEX_2171830001.kicad_mod
pcb/libraries/219-2MSTR/: 219-2MSTR.kicad_sym  SW_219-2MSTR.kicad_mod
pcb/libraries/598-8020-107F/: 598-8020-107F.kicad_sym  598-8020-107F.step  LEDSC160X80X70L45N.kicad_mod
pcb/libraries/AMS1117-3.3/: SOT229P700X180-4N.kicad_mod
pcb/libraries/B4B-XH-A_LF__SN_/: B4B-XH-A_LF__SN_.kicad_sym  JST_B4B-XH-A_LF__SN_.kicad_mod
pcb/libraries/B5B-XH-A/: B5B-XH-A.kicad_sym  JST_B5B-XH-A.kicad_mod
pcb/libraries/ERJU03J106V/: ERJU03J106V.kicad_sym  RES_ERJU03J106V.kicad_mod
pcb/libraries/ESP32-S2-DEVKITM-1U/: ESP32-S2-DEVKITM-1U.kicad_sym  XCVR_ESP32-S2-DEVKITM-1U.kicad_mod
pcb/libraries/ESP32-S2-SOLO-N4/: ESP32-S2-SOLO-N4.kicad_sym  XCVR_ESP32-S2-SOLO-N4.kicad_mod
pcb/libraries/FSM8JH/: FSM8JH.kicad_sym  SW_FSM8JH.kicad_mod
pcb/libraries/Logo_Ronnad/: Logo_Ronnad.kicad_mod
pcb/libraries/MSS1038-522NLC/: IND_MSS1038-522NLC.kicad_mod  MSS1038-522NLC.kicad_sym
pcb/libraries/SS34/: DIOM7959X265N.kicad_mod  SS34.kicad_sym
pcb/libraries/TSW-101-17-T-T/: SAMTEC_TSW-101-17-T-T.kicad_mod  TSW-101-17-T-T.kicad_sym
pcb/libraries/WCAP-CSGP_0603/: WCAP-CSGP_0603.kicad_sym  WCAP-CSGP_0603_R.kicad_mod
pcb/libraries/WP7113ID/: LED_WP7113ID.kicad_mod  WP7113ID.kicad_sym
pcb/open-01-pcb/: open-01-pcb.kicad_pcb  open-01-pcb.kicad_prl  open-01-pcb.kicad_pro  open-01-pcb.kicad_sch  ~open-01-pcb.kicad_pro.lck
robot_firmware/: CMakeLists.txt
robot_firmware/main/: CMakeLists.txt  main.cpp
robot_firmware/main/common/: robot_state.cpp  robot_state.h
robot_firmware/main/comms/: comm_handler.cpp  comm_handler.h  comm_protocol.h  comm_serial.cpp  comm_serial.h
robot_firmware/main/config/: config.h
robot_firmware/main/drivers/: drv_mpu6500.cpp  drv_mpu6500.h  drv_vl53l0x.cpp  drv_vl53l0x.h
robot_firmware/main/hal/: hal_battery.cpp  hal_battery.h  hal_imu.cpp  hal_imu.h  hal_motor.cpp  hal_motor.h  hal_tof.cpp  hal_tof.h
robot_firmware/main/services/: kinematic.cpp  kinematic.h  motor_controller.cpp  motor_controller.h  odometry.cpp  odometry.h  pid.cpp  pid.h
robot_firmware/main/tasks/: task_battery.cpp  task_battery.h  task_comms.cpp  task_comms.h  task_imu.cpp  task_imu.h  task_motor.cpp  task_motor.h  task_tof.cpp  task_tof.h
robot_ros2/: oled_status.py  open01_start.sh
robot_ros2/ros2_ws/install/: local_setup.sh  setup.sh
robot_ros2/ros2_ws/log/: latest_build
robot_ros2/ros2_ws/src/open01_serial_bridge/: package.xml  setup.cfg  setup.py
robot_ros2/ros2_ws/src/open01_serial_bridge/open01_serial_bridge/: lidar_node.py  serial_bridge_node.py
robot_ros2/ros2_ws/src/open01_viz/: CMakeLists.txt  package.xml
robot_ros2/ros2_ws/src/open01_viz/config/: ekf.yaml  open01.rviz
robot_ros2/ros2_ws/src/open01_viz/launch/: viz.launch.py
scripts/: setup_host.sh  setup_rpi.sh
tools/: README_ESP-IDF_Tool.md  launcher.py  lds02_test.py  open-01-dashboard.html  setup.sh
(+35 files in other folders)
