<?xml version="1.0"?>
<package format="3">
  <name>open01_viz</name>
  <version>0.1.0</version>
  <description>Visualization launch package for OPEN-01 on laptop</description>
  <maintainer email="your@email.com">Ronish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>open01_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>